# SQL-Agent-Hackapizza

./: .gitignore  README.md  pyproject.toml
db/: Script_Creazione_Tabelle.sql  popola_distance_matrix.py  popola_licenze.py  popola_tecniche.py
docs/: Manuale di Cucina.pdf.md  domande.csv  output.txt  relazioni.txt
docs/json/: Anima Cosmica.json  Armonia Universale.json  Cosmica Essenza.json  Datapizza.json  Eco di Pandora.json  Eredita Galattica.json  Essenza dell Infinito.json  Il Firmamento.json  L Architetto dell Universo.json  L Eco dei Sapori.json  L Equilibrio Quantico.json  L Essenza Cosmica.json  L Essenza del Multiverso su Pandora.json  L Essenza delle Dune.json  L Essenza di Asgard.json  L Etere del Gusto.json  L Oasi delle Dune Stellari.json  L Universo in Cucina.json  L infinito in un Boccone.json  Le Dimensioni del Gusto.json  Le Stelle Danzanti.json  Le Stelle che Ballano.json  Manuale di Cucina.json  Manuale di Cucina_1.json  Ristorante Quantico.json  Ristorante delle Dune Stellari.json  Sala del Valhalla.json  Sapore del Dune.json  Stelle Astrofisiche.json  Stelle dell Infinito Celestiale.json  Tutti a TARSvola.json  Universo Gastronomico di Namecc.json
docs/jsonNew/: Anima Cosmica.json  Armonia Universale.json  Cosmica Essenza.json  Datapizza.json  Eco di Pandora.json  Eredita Galattica.json  Essenza dell Infinito.json  Il Firmamento.json  (+22 more)
preprocessing/: extractMenu.py  extractTecniche.py  menuExtractor.py  prompt.py  repository.py
src/: extractMenu.py  ingest.py  main.py  models.py  qa.py  semaphore.py  settings.py  training.py  uploader.py
(+20 files in other folders)
