[tool.poetry]
package-mode = false

[project]
name = "delphiai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-ibm (>=0.3.5,<0.4.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "langgraph (>=0.2.64,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
