[tool.poetry]
package-mode = false

[project]
name = "delphiai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-ibm (>=0.3.5,<0.4.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "kaleido (==0.2.1)",
    "vanna (>=0.7.5,<0.8.0)",
    "langgraph (>=0.2.64,<0.3.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "openai (>=1.59.8,<2.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "cryptography (>=44.0.0,<45.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
